syntax = "proto3";

option java_package ="com.assignment1.inventory.grpc";
option java_outer_classname = "InventoryUserProto";

service InventoryService {

  rpc searchByID(InventoryID) returns (InventoryList);
  rpc searchByIDRange(InventoryIDRange) returns (stream InventoryList);
  rpc getDistribution (PercentileRequest) returns (PercentileResponse);
  rpc update(UpdateRequest) returns (UpdateResponse);
}
  message InventoryID{
    string ID = 1;
  }

  message InventoryIDRange{
  string ID_Start = 1;
  string ID_End = 2;
  }

  message InventoryList{
  string InventoryID = 1;
  string Name = 2;
  string Description = 3;
  string UnitPrice = 4;
  int32 QuantityInStock = 5;
  string InventoryValue = 6;
  int32 RecorderLevel = 7;
  int32 RecorderTimeInDays = 8;
  int32 QuantityInRecorder = 9;
  bool Discontinued = 10;
 }

 message PercentileRequest{
  string keyName = 1;
  double percentile = 2;
 }

  message PercentileResponse{
  int32 QuantityInStockPercentile = 1;
 }
 message UpdateRequest{
  string InventoryID=9;
  string id=1;
  int32 value=2;
 }
 message UpdateResponse{
  bool returnValue = 1;
 }